@@ -15,6 +15,7 @@ Coccinella-0.96.4 (2007????)
  o xml console
  o spell checking
  o secure (sasl) indicator
+ o major rework of subscription dialogs
 
 
 Coccinella-0.96.2 (20070919)
